--- a/src/main/res/layout-v21/timetable_hour_activity.xml
+++ b/src/main/res/layout-v21/timetable_hour_activity.xml
@@ -23,11 +23,12 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <ListView
+        <de.domjos.schooltools.custom.SwipeRefreshDeleteList
             android:id="@+id/lvHours"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/svControls"/>
+            android:layout_above="@+id/svControls"
+            app:itemIcon="@drawable/ic_access_time_black_24dp"/>
 
         <ScrollView
             android:id="@+id/svControls"
