--- a/src/main/res/xml/bookmark_widget_info.xml
+++ b/src/main/res/xml/bookmark_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/bookmark_widget"
     android:minWidth="110dp"
     android:minHeight="110dp"
-    android:previewImage="@mipmap/ic_launcher"
+    android:previewImage="@drawable/ic_bookmark_black_24dp"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"/>
