--- a/src/main/res/layout/learning_card_overview_activity.xml
+++ b/src/main/res/layout/learning_card_overview_activity.xml
@@ -57,5 +57,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation_learning_card_overview"
+        app:labelVisibilityMode="labeled"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
