--- a/src/main/res/layout/whats_new_content.xml
+++ b/src/main/res/layout/whats_new_content.xml
@@ -21,7 +21,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/item_background">
 
         <TextView
             android:id="@+id/lblContent"
