--- a/app/src/main/res/layout/learning_card_overview_activity.xml
+++ b/app/src/main/res/layout/learning_card_overview_activity.xml
@@ -25,7 +25,8 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:navigationIcon="?attr/homeAsUpIndicator"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
