--- a/app/src/main/res/layout/learning_card_group_activity.xml
+++ b/app/src/main/res/layout/learning_card_group_activity.xml
@@ -20,7 +20,8 @@
         android:id="@+id/lvLearningCardGroups"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:itemIcon="@drawable/ic_group_work_black_24dp"/>
+        app:itemIcon="@drawable/ic_group_work_black_24dp"
+        app:listItemBackground="@drawable/listview_background"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/cmdLearningCardGroupAdd"
@@ -30,7 +31,6 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="8dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
