--- a/app/src/main/res/layout/mark_activity.xml
+++ b/app/src/main/res/layout/mark_activity.xml
@@ -101,7 +101,7 @@
                 android:layout_height="match_parent"
                 app:itemIcon="@drawable/ic_check_circle_black_24dp"
                 app:listItemBackground="@drawable/listview_background"
-                app:listItemForeground="@color/background"/>
+                app:listItemForeground="@color/colorPrimaryDark"/>
         </RelativeLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
